2009-06-11  Jaroslav Hajek  <highegg@gmail.com>

	* example/@polynomial/numel.m: New method.
	* example/@polynomial/Makefile.in: Include it.

2009-05-22 Benjamin Lindner <lindnerb@users.sourceforge.net>

	* mkoctfile.cc.in: mask MSVC specific linker flags for mex output

2009-06-02  Robert T. Short  <octave@phaselockedsystems.com>

	* examples/@polynomial: Fix end method for zero based indexing.

2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* examples/@polynomial/subsref.m: Allow chained subscripts,
	fix behavior according to docs.
	* examples/@polynomial/subsasgn.m: Allow chained subscripts,
	fix behavior according to docs.

2009-06-02  Robert T. Short  <octave@phaselockedsystems.com>

	* examples/@polynomial: Remove tabs from all functions so
	documentation looks right.  Fix a bunch of methods
	that didn't work.  Add a method referred to in the docs
	that didn't exist.

2009-05-26  John W. Eaton  <jwe@octave.org>

	* src/dirfns.cc (Fpathsep): Allow path separator to be set.

2009-03-17  Thomas Weber  <thomas.weber.mail at gmail.com>

        * configure.in: fix typo with regards to termios.h

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* examples/@FIRfilter/Makefile.in: New file.
	* examples/Makefile.in: Include it.
	* configure.in: Ditto.

2009-05-24  Benjamin Lindner <lindnerb@users.sourceforge.net>

	* configure.in: (SCRIPTS_EXE_SUFFIX) Define to ".exe" for 
	mingw32 compilation (similar to msvc)

2009-05-24  Robert T. Short  <octave@phaselockedsystems.com>

	* examples/@FIRfilter: added FIRfilter class example.

2009-05-22  Marco Atzeri  <marco_atzeri@yahoo.it>

        * src/sysdep.cc: Removed CYGWIN_init 

2009-05-21  Marco Atzeri  <marco_atzeri@yahoo.it>
        * configure.in: Correct my mistake in cygwin SHLBINPRE SHLBIN

2008-05-21  Michael Goffioul <michael.goffioul@gmail.com>

	* aclocal.m4 (AC_CHECK_QHULL_OK): Do not use -lm under
	Windows systems.
	* configure.in: Add -luser32 to LIBS under Windows.
